[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://menuScenes/jobs/TabContainer2.gd" type="Script" id=2]
[ext_resource path="res://renner-small.tres" type="DynamicFont" id=3]
[ext_resource path="res://menuScenes/jobs/Work.gd" type="Script" id=4]
[ext_resource path="res://menuScenes/jobs/memory2.gd" type="Script" id=5]
[ext_resource path="res://data/buttons/greenopen.png" type="Texture" id=6]
[ext_resource path="res://menuScenes/jobs/whack2.gd" type="Script" id=7]

[node name="jobselect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 40.0
margin_top = 8.0
margin_right = 952.0
margin_bottom = 513.0
tab_align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apply" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0
tab_align = 0

[node name="Control" type="Control" parent="TabContainer/Apply"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Apply"]
margin_left = 88.0
margin_top = 45.0
margin_right = 390.0
margin_bottom = 78.0
text = "Apply for a job"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="currentjob" type="Label" parent="TabContainer/Apply"]
margin_left = 504.0
margin_top = 45.0
margin_right = 728.0
margin_bottom = 78.0
text = "Job | $120000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jobs" type="VBoxContainer" parent="TabContainer/Apply"]
margin_left = 64.0
margin_top = 109.0
margin_right = 408.0
margin_bottom = 404.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="job1" type="Button" parent="TabContainer/Apply/jobs"]
margin_right = 344.0
margin_bottom = 43.0
text = "job1"

[node name="job2" type="Button" parent="TabContainer/Apply/jobs"]
margin_top = 83.0
margin_right = 344.0
margin_bottom = 126.0
text = "job1"

[node name="job3" type="Button" parent="TabContainer/Apply/jobs"]
margin_top = 166.0
margin_right = 344.0
margin_bottom = 209.0
text = "job1"

[node name="job4" type="Button" parent="TabContainer/Apply/jobs"]
margin_top = 249.0
margin_right = 344.0
margin_bottom = 292.0
text = "job1"

[node name="job" type="Control" parent="TabContainer/Apply"]
margin_left = 408.0
margin_top = 85.0
margin_right = 728.0
margin_bottom = 413.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TabContainer/Apply/job"]
margin_left = 96.0
margin_top = 144.0
margin_right = 480.0
margin_bottom = 177.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="TabContainer/Apply/job"]
margin_left = 96.0
margin_top = 232.0
margin_right = 277.0
margin_bottom = 301.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="TabContainer/Apply"]
margin_left = 520.0
margin_top = 109.0
margin_right = 592.0
margin_bottom = 152.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Work" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nojob" type="Label" parent="TabContainer/Work"]
visible = false
margin_left = 299.939
margin_top = 187.69
margin_right = 618.939
margin_bottom = 220.69
text = "You do not have a job"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Work" type="Control" parent="TabContainer/Work"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="Control" parent="TabContainer/Work/Work"]
margin_right = 40.0
margin_bottom = 40.0

[node name="job" type="Label" parent="TabContainer/Work/Work/main"]
margin_left = 192.0
margin_top = 125.0
margin_right = 704.0
margin_bottom = 222.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TabContainer/Work/Work/main"]
margin_left = 352.0
margin_top = 277.0
margin_right = 553.0
margin_bottom = 320.0
text = "Work A Shift"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hours" type="Label" parent="TabContainer/Work/Work/main"]
margin_left = 296.0
margin_top = 357.0
margin_right = 624.0
margin_bottom = 390.0
text = "0/1680 hours worked"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullyear" type="Label" parent="TabContainer/Work/Work/main"]
margin_left = 243.0
margin_top = 277.0
margin_right = 652.0
margin_bottom = 310.0
text = "You have worked a full year"
align = 1

[node name="memory" type="Control" parent="TabContainer/Work/Work"]
visible = false
margin_right = 920.0
margin_bottom = 453.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instruct" type="Label" parent="TabContainer/Work/Work/memory"]
margin_left = 248.0
margin_top = 53.0
margin_right = 634.0
margin_bottom = 122.0
text = "Remember the numbers you see and write it down. There will be 4 numbers."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Label" parent="TabContainer/Work/Work/memory"]
margin_left = 400.0
margin_top = 181.0
margin_right = 480.0
margin_bottom = 214.0
text = "456"
align = 1

[node name="answer" type="LineEdit" parent="TabContainer/Work/Work/memory"]
margin_left = 312.0
margin_top = 245.0
margin_right = 576.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="TabContainer/Work/Work/memory"]
margin_left = 376.0
margin_top = 373.0
margin_right = 504.0
margin_bottom = 406.0
text = "0/5"
align = 1

[node name="whack" type="Control" parent="TabContainer/Work/Work"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instruct" type="Label" parent="TabContainer/Work/Work/whack"]
margin_left = 192.0
margin_top = 45.0
margin_right = 687.0
margin_bottom = 78.0
text = "Press the button when it turns red"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="greenopen" type="Sprite" parent="TabContainer/Work/Work/whack"]
position = Vector2( 232, 181 )
scale = Vector2( 0.0963543, 0.0963543 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="TabContainer/Work/Work/whack/greenopen"]
margin_left = -415.0
margin_top = -332.0
margin_right = 415.0
margin_bottom = 332.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="greenopen2" type="Sprite" parent="TabContainer/Work/Work/whack"]
position = Vector2( 432, 181 )
scale = Vector2( 0.0963543, 0.0963543 )
texture = ExtResource( 6 )

[node name="Button1" type="Button" parent="TabContainer/Work/Work/whack/greenopen2"]
margin_left = -415.0
margin_top = -332.0
margin_right = 415.0
margin_bottom = 332.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="greenopen3" type="Sprite" parent="TabContainer/Work/Work/whack"]
position = Vector2( 632, 181 )
scale = Vector2( 0.0963543, 0.0963543 )
texture = ExtResource( 6 )

[node name="Button2" type="Button" parent="TabContainer/Work/Work/whack/greenopen3"]
margin_left = -415.0
margin_top = -332.0
margin_right = 415.0
margin_bottom = 332.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="greenopen4" type="Sprite" parent="TabContainer/Work/Work/whack"]
position = Vector2( 234.667, 311 )
scale = Vector2( 0.0963543, 0.0963543 )
texture = ExtResource( 6 )

[node name="Button3" type="Button" parent="TabContainer/Work/Work/whack/greenopen4"]
margin_left = -415.0
margin_top = -332.0
margin_right = 415.0
margin_bottom = 332.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="greenopen5" type="Sprite" parent="TabContainer/Work/Work/whack"]
position = Vector2( 434.667, 311 )
scale = Vector2( 0.0963543, 0.0963543 )
texture = ExtResource( 6 )

[node name="Button4" type="Button" parent="TabContainer/Work/Work/whack/greenopen5"]
margin_left = -415.0
margin_top = -332.0
margin_right = 415.0
margin_bottom = 332.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="greenopen6" type="Sprite" parent="TabContainer/Work/Work/whack"]
position = Vector2( 634.667, 311 )
scale = Vector2( 0.0963543, 0.0963543 )
texture = ExtResource( 6 )

[node name="Button5" type="Button" parent="TabContainer/Work/Work/whack/greenopen6"]
margin_left = -415.0
margin_top = -332.0
margin_right = 415.0
margin_bottom = 332.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="score" type="Label" parent="TabContainer/Work/Work/whack"]
margin_left = 424.0
margin_top = 397.0
margin_right = 484.0
margin_bottom = 430.0
text = "0/5"
[connection signal="tab_changed" from="TabContainer" to="TabContainer" method="_on_TabContainer_tab_changed"]
[connection signal="mouse_entered" from="TabContainer/Apply/jobs/job1" to="TabContainer" method="_on_job1_mouse_entered"]
[connection signal="pressed" from="TabContainer/Apply/jobs/job1" to="TabContainer" method="_on_job1_pressed"]
[connection signal="mouse_entered" from="TabContainer/Apply/jobs/job2" to="TabContainer" method="_on_job2_mouse_entered"]
[connection signal="pressed" from="TabContainer/Apply/jobs/job2" to="TabContainer" method="_on_job2_pressed"]
[connection signal="mouse_entered" from="TabContainer/Apply/jobs/job3" to="TabContainer" method="_on_job3_mouse_entered"]
[connection signal="pressed" from="TabContainer/Apply/jobs/job3" to="TabContainer" method="_on_job3_pressed"]
[connection signal="mouse_entered" from="TabContainer/Apply/jobs/job4" to="TabContainer" method="_on_job4_mouse_entered"]
[connection signal="pressed" from="TabContainer/Apply/jobs/job4" to="TabContainer" method="_on_job4_pressed"]
[connection signal="pressed" from="TabContainer/Apply/Quit" to="TabContainer" method="_on_Quit_pressed"]
[connection signal="pressed" from="TabContainer/Work/Work/main/Button" to="TabContainer/Work" method="_on_Button_pressed"]
[connection signal="text_entered" from="TabContainer/Work/Work/memory/answer" to="TabContainer/Work/Work/memory" method="_on_answer_text_entered"]
[connection signal="mouse_entered" from="TabContainer/Work/Work/whack/greenopen/Button" to="TabContainer/Work/Work/whack" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="TabContainer/Work/Work/whack/greenopen/Button" to="TabContainer/Work/Work/whack" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="TabContainer/Work/Work/whack/greenopen2/Button1" to="TabContainer/Work/Work/whack" method="_on_Button1_mouse_entered"]
[connection signal="pressed" from="TabContainer/Work/Work/whack/greenopen2/Button1" to="TabContainer/Work/Work/whack" method="_on_Button1_pressed"]
[connection signal="mouse_entered" from="TabContainer/Work/Work/whack/greenopen3/Button2" to="TabContainer/Work/Work/whack" method="_on_Button2_mouse_entered"]
[connection signal="pressed" from="TabContainer/Work/Work/whack/greenopen3/Button2" to="TabContainer/Work/Work/whack" method="_on_Button2_pressed"]
[connection signal="mouse_entered" from="TabContainer/Work/Work/whack/greenopen4/Button3" to="TabContainer/Work/Work/whack" method="_on_Button3_mouse_entered"]
[connection signal="pressed" from="TabContainer/Work/Work/whack/greenopen4/Button3" to="TabContainer/Work/Work/whack" method="_on_Button3_pressed"]
[connection signal="mouse_entered" from="TabContainer/Work/Work/whack/greenopen5/Button4" to="TabContainer/Work/Work/whack" method="_on_Button4_mouse_entered"]
[connection signal="pressed" from="TabContainer/Work/Work/whack/greenopen5/Button4" to="TabContainer/Work/Work/whack" method="_on_Button4_pressed"]
[connection signal="mouse_entered" from="TabContainer/Work/Work/whack/greenopen6/Button5" to="TabContainer/Work/Work/whack" method="_on_Button5_mouse_entered"]
[connection signal="pressed" from="TabContainer/Work/Work/whack/greenopen6/Button5" to="TabContainer/Work/Work/whack" method="_on_Button5_pressed"]
